# enderecobr

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  404.html  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  codemeta.json  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
R/: codigos.R  correspondencia_campos.R  correspondencia_logradouro.R  enderecobr.R  enderecopadrao.R  erro.R  extendr-wrappers.R  mensagem.R  padronizar_bairros.R  padronizar_ceps.R  padronizar_complementos.R  padronizar_enderecos.R  padronizar_estados.R  padronizar_logradouro.R  padronizar_logradouros.R  padronizar_logradouros_com_tipo.R  padronizar_logradouros_completos.R  padronizar_municipios.R  padronizar_numeros.R  padronizar_tipos_de_logradouro.R  warning.R
articles/: enderecobr.html  enderecopadrao.html  index.html
data-raw/: extracao_tabelas_de_codigos.R
dev/: LICENSE-text.md  (+11 more)
python-package/: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
python-package/src/enderecobr/: __init__.py  codigos.py  erro.py  mensagem.py  padronizar_bairros.py  padronizar_ceps.py  padronizar_complementos.py  padronizar_enderecos.py  padronizar_estados.py  padronizar_logradouros.py  padronizar_logradouros_completos.py  padronizar_municipios.py  padronizar_numeros.py  padronizar_tipos_de_logradouro.py  warning.py
python-package/src/enderecobr/data/: RELATORIO_DTB_BRASIL_MUNICIPIO.xls  codigos_brasil.xls  extracao_tabelas_de_codigos.py
python-package/src/test/: test.py
rust_cep/: Cargo.toml  README.md  criar_dados_teste.sh
rust_cep/src/: main.rs
(+159 files in other folders)
